Fixed issue first word in message would not go to new line if it did not fit.
fixed by adding leading space.

--- a/public/css/videoChatPlayer.css
+++ b/public/css/videoChatPlayer.css
@@ -1835,7 +1835,7 @@ input {
 
 .messagePrefix {
     vertical-align: top;
-    margin-right: 3px;
+    margin-right: 1px;
 }
 
 .chatmessage {
